fixed coverflow bug where it wouldnt not display correctly on google chrome

--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -1842,7 +1842,12 @@ th.b4 {
 }
 
 .text1 {
-    background-color:white;
-    padding:20px;
+    background-color: white;
+    padding: 20px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
+    /*margin:60px;*/
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
 }
